# test

./: .gitignore  README.md  __init__.py  current_deps.json  environment.toml  imp_paths.txt  old_npc_temp.py  pipeline_config.json  pyproject.toml  pytest.ini  requirements.txt  safe_sync.sh  sys_path.txt  test_err.txt  verify_wsl_env.py
bayesian_cluster_100/: av_coordinates_final.csv  best.scores.rex.py  frame_scores.csv  stat.0.out  stat_replica.0.out
bayesian_cluster_23/: av_coordinates_final.csv  best.scores.rex.py  frame_scores.csv  stat.0.out  stat_replica.0.out
bayesian_cluster_240/: av_coordinates_final.csv  best.scores.rex.py  frame_scores.csv  stat.0.out  stat_replica.0.out
bayesian_cluster_376/: av_coordinates_final.csv  best.scores.rex.py  frame_scores.csv  stat.0.out  stat_replica.0.out
bayesian_cluster_484/: av_coordinates_final.csv  best.scores.rex.py  frame_scores.csv  stat.0.out  stat_replica.0.out
bayesian_cluster_87/: av_coordinates_final.csv  best.scores.rex.py  frame_scores.csv  stat.0.out  stat_replica.0.out
bayesian_cluster_885/: av_coordinates_final.csv  best.scores.rex.py  frame_scores.csv  stat.0.out  stat_replica.0.out
bayesian_cluster_907/: av_coordinates_final.csv  best.scores.rex.py  frame_scores.csv  stat.0.out  stat_replica.0.out
docs/: brain_ai_ingestion_summary.md  eman2_workflow.md  gmm_overview_and_roadmap.md  posterior_density.md  scoring_models.md
examples/: NPC_example.py  NPC_example_BD.py  analyze_target_cluster_candidates.py  av_parameter.json  benchmark_latency_results.csv  benchmark_plotter.py  check_clusters.py  (+44 more)
(+139 files in other folders)
