[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smlm_score"
version = "0.1.0"
description = "SMLM-IMP: Bayesian scoring of SMLM data against IMP structural models"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "TBD"}
authors = [
    {name = "Daniel Rieger"},
]
keywords = ["SMLM", "IMP", "NPC", "scoring", "Bayesian", "structural-biology"]
dependencies = [
    "numpy>=2.1.0",
    "pandas==2.2.3",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.0",
    "numba>=0.61.0",
    "numba-cuda>=0.28.0",
    "opencv-python-headless>=4.10.0",
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "tqdm>=4.66.0",
    "pydantic>=2.9.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["smlm_score*"]
